--- a/templates/home.html
+++ b/templates/home.html
@@ -6,4 +6,6 @@
 
 
 {% block main %}
+<button type="submit" class="btn btn-default">Prender LED</button>
+<button type="submit" class="btn btn-default">Apagar LED</button>
 {% endblock %}
