--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,6 @@
 
 
 {% block main %}
-<button type="submit" class="btn btn-default">Prender LED</button>
-<button type="submit" class="btn btn-default">Apagar LED</button>
+<a href="/turn_on" class="btn btn-default">Prender LED</a>
+<a href="/turn_off" class="btn btn-default">Apagar LED</a>
 {% endblock %}
